Update WelcomeController.java